interaksi pengguna dengan display dan penambahan library
perlu di cek ulang

--- a/sistem_esp32/otomasi_penyiram_tanaman_v2/platformio.ini
+++ b/sistem_esp32/otomasi_penyiram_tanaman_v2/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
 	smougenot/TM1637@0.0.0-alpha+sha.9486982048
 	adafruit/RTClib@^2.1.4
+	paulstoffregen/Encoder@^1.4.4
